fixed issue where cards would overlap and image would cover text below. also updated logo to the logo the customer prefered

--- a/ctrlalteat/src/main/resources/static/ctrlalteatCss/ctrlalteat.css
+++ b/ctrlalteat/src/main/resources/static/ctrlalteatCss/ctrlalteat.css
@@ -1,4 +1,6 @@
-
+.homePageContent {
+    margin: auto;
+}
 
 body {
     font-family: Verdana, Arial, sans-serif;
@@ -26,10 +28,9 @@ h1{
 }
 
 .homeLogoImage {
-    margin: auto -5px;
-    height: 135%;
-    width: 110%;
-    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
 }
 
 .navbar {
@@ -45,6 +46,9 @@ h1{
 
 .recipeCard {
     position: relative;
+    width: 23rem;
+    height: 14rem;
+    padding: 2px;
 }
 
 .recipeCard a::before {
@@ -57,15 +61,31 @@ h1{
 }
 
 .card-img-top {
-    width: 100%;
-    height: 100%;
     object-fit: cover;
+    overflow: hidden;
+    max-height: 100%;
+    min-height: 100%;
+}
+.card {
+    height: 100%;
+}
+
+.cardImageDiv {
+    width: 100%;
+    overflow: hidden;
+    height: 80%;
 }
 
 .recipeHeaderCard {
     padding: 20px;
 }
 
+.recipeHeaderCard {
+    position: relative;
+    width: 23rem;
+    height: 14rem;
+    padding: 2px;
+}
 .card-title {
     font-weight: bold;
 }
@@ -137,7 +157,7 @@ div.recipeServings {
 
 div.recipeImage {
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
     float: right;
     padding: 10px;
     width: 33%;
